--- a/css/style.css
+++ b/css/style.css
@@ -116,6 +116,47 @@
 .contact {
     height: 300px;
     background-color: white;
+    display: flex;
+    justify-content: center;
+}
+
+.contact .bannerContainer {
+    height: 100px;
+    max-width: 1000px;
+    background-color: #3882F6;
+    display: flex;
+    border: none;
+    border-radius: 10px;
+    margin: auto;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    gap: 10px;
+    padding: 10px;
+}
+
+.bannerContainer .textBox {
+    flex:2;
+}
+
+.bannerContainer .buttonBox {
+    flex: 1;
+}
+
+.bannerContainer .button {
+    border: 2px solid white;
+    border-radius: 10px;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
+
+.bannerContainer span {
+    font-weight: bold;
+    font-size: 18px;
 }
 
 .footer {
